Readapted UpdatePokemon API
